# bazel-terraform-conftest-experiments

./: .gitignore  .gitpod.yml  BUILD.bazel  Makefile  README.md  WORKSPACE
.github/workflows/: test.yaml
.gitpod/: Dockerfile
bazel/: rules.bzl  terraform.bzl  terraformv2.bzl
bazel/lib/rules_terraform/: cmd.bzl  defs.bzl
bazel/macros/: http_toolchain.bzl  load_all.bzl
bazel/rules/: deps.bzl
bazel/rules/rules_openpolicyagent/: defs.bzl
bazel/rules/rules_terraform/: WORKSPACE  defs.bzl
bazel/toolchains/: conftest.toolchain  opa.toolchain  terraform.toolchain
modules/random-uuid/: BUILD.bazel  main.tf
src/: BUILD.bazel  TODO  _terraform.tf
tfblueprint/: BUILD.bazel  main.tf
tfinfra/: BUILD.bazel  main.tf
