load("//:bazel/lib/rules_terraform/defs.bzl", "terraform_package", "terraform_workspace")

terraform_package(
    name = "package",
    srcs = glob(["*.tf"]),
)

# Use a makefile for parameterized systems
terraform_workspace(
    name = "deploy",
    src = ":package",
    arguments = ["apply", "-auto-approve"]
)
